--- a/_posts/2013-11-14-sample.md
+++ b/_posts/2013-11-14-sample.md
@@ -12,7 +12,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 <pre class="prettyprint">
 <code>
- ar jss = 'this is js';
+ var jss = 'this is js';
  $('#selector').css('border','none');
 </code>
 </pre>
