syntax highlighting changed to pygments. Posts formatted.

--- a/_posts/2013-11-14-sample-2.md
+++ b/_posts/2013-11-14-sample-2.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Sample 2
-categories: ['general', 'demo','sample']
-tags: ['demo','dbyll','dbtek','sample2']
+categories: [general,demo,sample]
+tags: [demo,dbyll,dbtek,sample2]
 description: Sample placeholder post.
 ---
 
