--- a/_posts/2015-09-24-cstest.md
+++ b/_posts/2015-09-24-cstest.md
@@ -2,6 +2,11 @@
 published: false
 ---
 
+---
+published: true
+---
+
+
 키보드로 컨트롤이 절실한 경우가 있다. 컨트롤 들의 미세한 컨트를을 위해서 이다.(예를 들면 Slider 류) 
 그런데 한 화면에 Textbox 가 있고, 이것은 키보드 포커스를 뺏어가서 반환 하지 않는다. 그래서 아래와 같은 방법으로 처리 할 수 있다.
 
