--- a/_posts/2015-10-28-The Park.md
+++ b/_posts/2015-10-28-The Park.md
@@ -1,7 +1,9 @@
 ---
-layout: post
 published: true
+layout: post
 title: Review - *The Park* (no spoilers)
+categories: [games, reviews]
+tags: [tsw, funcom]
 ---
 I did actually preorder this game so I got it on launch day and spent a few hours with it. I guess Funcom can't be accused of misrepresentation - the second sentence of the description on the game's Steam page states it clearly enough: "*The Park* is a one to two hour long... experience". I played it straight once and then a couple more times to get all the achievements.
 
