--- a/_posts/2015-10-28-The Park.md
+++ b/_posts/2015-10-28-The Park.md
@@ -11,7 +11,7 @@ So was it any good? Well, I can't say I had expectations either way. I already p
 
 Maybe not as well as they do a MMO.
 
-Of course the MMO does have a significant multiplayer aspect to it, to be worthy of that middle M but huge part of the game is about exploring and enjoying the story - which it could be argued is best enjoyed solo . Indeed you can quite legitimately enjoy *The Secret World* as a single-player experience and some reviewers have previously jokingly referred to it as a single-player MMO.
+Of course the MMO does have a significant multiplayer aspect to it, to be worthy of that middle M but huge part of the game is about exploring and enjoying the story - which some might argue is something best enjoyed solo. Indeed you can quite legitimately enjoy *The Secret World* as a single-player experience and some reviewers have previously jokingly referred to it as a single-player MMO.
 
 One discount code later and I ended up paying just over £5 for the game. Whether or not it's worth that much is really down to what you're looking for in this game. 
 
