--- a/_posts/2015-10-28-The Park.md
+++ b/_posts/2015-10-28-The Park.md
@@ -1,7 +1,7 @@
 ---
 published: true
 layout: post
-title: Review - *The Park* (no spoilers)
+title: Review - The Park (no spoilers)
 categories: [games, reviews]
 tags: [tsw, funcom]
 ---
