--- a/_posts/2015-10-28-The Park.md
+++ b/_posts/2015-10-28-The Park.md
@@ -1,8 +1,8 @@
 ---
 published: true
 layout: post
-title: |-
-REVIEW: The Park (no spoilers)
+title: >-
+  REVIEW: The Park (no spoilers)
 categories: [games, reviews]
 tags: [tsw, funcom]
 ---
