--- a/_posts/2020-05-27-summary.md
+++ b/_posts/2020-05-27-summary.md
@@ -17,9 +17,7 @@ systems, productivity tools, online learning management systems – complex
 infrastructure that is critical to conducting the end-to-end business of the university.
 
 Through the seamless provision of these services, these companies can invisibly
-and strategically influence, and perhaps exert control, over key university decisions
-
-- ranging from student assessment to research integrity to financial planning. Data
+and strategically influence, and perhaps exert control, over key university decisions - ranging from student assessment to research integrity to financial planning. Data
 about students, faculty, research outputs, institutional productivity, and more has,
 potentially, enormous competitive value. It represents a potential multi-billion-dollar
 market (perhaps multi-trillion, when the value of intellectual property is factored in),
