--- a/_posts/2020-05-27-summary.md
+++ b/_posts/2020-05-27-summary.md
@@ -3,7 +3,10 @@ layout: post
 title: Summary
 categories: landscape-analysis
 tags:
-description:
+description: This document is designed to provide higher education leaders with an analysis of the leading commercial players strategies in this domain, the implications of those
+strategies, and a preliminary set of possible broad-stroke strategies that higher
+education institutions might consider taking to secure outcomes consistent with their
+own values and goals.
 permalink: /summary
 ---
 
