sensible url schema

--- a/_posts/2020-05-26-research.md
+++ b/_posts/2020-05-26-research.md
@@ -4,7 +4,7 @@ title: Research
 categories: landscape-analysis
 tags:
 description: The paradox of the STM publishing industry is that it has very high visibility over its revenues in the next two to three years (because of multi-year contracts) and very little beyond this time frame.
-permalink: /research
+permalink: /landscape-analysis/research
 ---
 
 ## Background - An Industry in Transition
