--- a/_posts/2019-03-28-summary.md
+++ b/_posts/2019-03-28-summary.md
@@ -5,6 +5,7 @@ categories: landscape-analysis
 tags: terms-and-conditions market-consolidation
 description: This document is designed to provide higher education leaders with an analysis of the leading commercial players strategies in this domain, the implications of those strategies, and a preliminary set of possible broad stroke strategies that higher education institutions might consider taking to secure outcomes consistent with their own values and goals.
 permalink: /landscape-analysis/summary
+order: 2
 ---
 
 Academic publishing is undergoing a major transition as some of its leaders are
