--- a/_posts/2020-05-30-template.md
+++ b/_posts/2020-05-30-template.md
@@ -5,6 +5,7 @@ categories:
 tags:
 description: The purpose of this document is to build on the Landscape Analysis by offering a roadmap of potential actions that stakeholders can use to chart both individual and collective responses.
 permalink: /template
+hidden: true
 ---
 
 This page is for testing and demonstrating all the different types of content we'll use.
