adding more things we'll need

--- a/_posts/2020-05-30-template.md
+++ b/_posts/2020-05-30-template.md
@@ -15,9 +15,10 @@ This page is for testing and demonstrating all the different types of content we
 ### Still big header (H3)
 #### Small header
 
-As the project unfolded, we recognized the need for a range of potential solutions for the key stakeholders to [consider pursuing](https://josephmcarthur.github.io/infrastructure/template). *The purpose of this document is to build on the Landscape Analysis by offering a roadmap of potential actions that stakeholders can use to chart both individual and collective responses*. **Recognizing that solutions to these complex issues are not “one size fits all,” this document offers a framework with multiple, concrete solutions that individual organizations can improve and adapt to their local culture and needs**.
+As the project unfolded, we recognized the need for a range of potential solutions for the key stakeholders to [consider pursuing](https://josephmcarthur.github.io/infrastructure/template). *The purpose of this document is to build on the Landscape Analysis by offering a roadmap of potential actions that stakeholders can use to chart both individual and collective responses*. **Recognizing that solutions to these complex issues are not “one size fits all,” this document offers a framework with multiple, concrete solutions that individual organizations can improve and adapt to their local culture and needs**. What about if this needs a footnote, how does that look?[^1]
 
 > I'm a block quote that can be used to quote ourselves previously
+
 
 Time for a list:
 
@@ -34,3 +35,11 @@ and another list
 4. numbers
 
 ![logo alt text]({{ site.BASE_PATH }}/assets/media/sparc_logo.png)
+
+| Syntax      | Description |
+| ----------- | ----------- |
+| Header      | Title       |
+| Paragraph   | Text        |
+
+
+[^1]: This is the first footnote.
