--- a/_posts/2020-05-30-template.md
+++ b/_posts/2020-05-30-template.md
@@ -34,7 +34,11 @@ and another list
 3. has
 4. numbers
 
+# Logo (image needs love)
+
 ![logo alt text]({{ site.BASE_PATH }}/assets/media/sparc_logo_black.png)
+
+# Table (table needs love)
 
 | Syntax      | Description |
 | ----------- | ----------- |
