--- a/_posts/2019-03-28-summary.md
+++ b/_posts/2019-03-28-summary.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Summary
-categories: landscape-analysis
+categories: [ landscape analysis ]
 tags: terms-and-conditions market-consolidation
 description: This document is designed to provide higher education leaders with an analysis of the leading commercial players strategies in this domain, the implications of those strategies, and a preliminary set of possible broad stroke strategies that higher education institutions might consider taking to secure outcomes consistent with their own values and goals.
 permalink: /landscape-analysis/summary
