--- a/_posts/2019-03-28-research.md
+++ b/_posts/2019-03-28-research.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Research
-categories: landscape-analysis
+category: landscape-analysis
 tags:
 description: The paradox of the STM publishing industry is that it has very high visibility over its revenues in the next two to three years (because of multi-year contracts) and very little beyond this time frame.
 permalink: /landscape-analysis/research
