--- a/_posts/2020-05-30-template.md
+++ b/_posts/2020-05-30-template.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Background
-categories:
+category:
 tags:
 description: The purpose of this document is to build on the Landscape Analysis by offering a roadmap of potential actions that stakeholders can use to chart both individual and collective responses.
 permalink: /template
