default.html change

--- a/_posts/2021-01-18-plato-idea02.markdown
+++ b/_posts/2021-01-18-plato-idea02.markdown
@@ -5,60 +5,69 @@ image: /Philosophy/Plato-Idea02/main.jpg
 date: 2021-01-18 10:20:20 0000
 tags: [Plato, Idea]
 categories: philosophy
+description: Idea
 ---
+
 # 플라톤의 두 차원
+
 플라톤의 사상 체계 안에서는 두 차원이 나뉘어져 있다.
-이데아와 영원히 존재하고 그 이데아를 모방해서 만들어진 현실세계가 바로 그 두 차원이다. 
-이러한 이론을 **이원론**이라고 한다. 
+이데아와 영원히 존재하고 그 이데아를 모방해서 만들어진 현실세계가 바로 그 두 차원이다.
+이러한 이론을 **이원론**이라고 한다.
 플라톤의 사상 체계는 <u>완전히 성격이 다른 이데아라는 차원과 현실이라는 두 차원을</u> 가지고 있다는 점에서 이원론이라고 할 수 있다.
 
 사실 이데아에 관해서 이야기하려면 빼놓을 수 없는 것이 플라톤의 동굴의 비유이다.
-![packed](..\..\..\..\images\Philosophy\Plato-Idea02\cave.jpg)
+![packed](........\images\Philosophy\Plato-Idea02\cave.jpg)
 
-***"동굴의 비유도 참 흥미로운 이야기이지만 다음에 시간이 되면 추가 설명해보도록 하겠다"***
+**_"동굴의 비유도 참 흥미로운 이야기이지만 다음에 시간이 되면 추가 설명해보도록 하겠다"_**
 
 ### 이데아와 현실
+
 이데아는 완전한 존재이지만 현실은 불완전한 존재이다.
 이데아와 현실의 관계는 모방(mimesis) 관계에 있다고 설명할 수 있다.
 이데아라는 원본이 먼저 영원히 변하지 않고 존재한다면 현실이라는 복사본이 나중에 존재하며 이는 변화하고 소멸하는 것이다.
-또 둘간의 분유(methexis) 관계에 있다고 할 수 있는데 현실은 이데아의 완전한 존재를 불완전하게 나누어 가짐으로써 존재한다는 것이다. 
+또 둘간의 분유(methexis) 관계에 있다고 할 수 있는데 현실은 이데아의 완전한 존재를 불완전하게 나누어 가짐으로써 존재한다는 것이다.
+
 #### 이데아를 모방한다는 것은 이데아를 분유한다고 말할 수도 있는 것이다.
-----
+
+---
+
 ## 이데아의 인식
 
 플라톤은 인간이 그러면 현실에 사는 인간이 이데아를 어떻게 하면 이데아를 좀 더 인식할 수 있느냐 라는 문제에 관해서 간단하게 한마디로 얘기할 수 있다. 바로 우리 인간의 이성을 통해서 인식할 수 있다고 한다.
-이 대답이 사실은 서양 사상사 전체를 기본적으로 틀짓는 대답이기도 하다. 
+이 대답이 사실은 서양 사상사 전체를 기본적으로 틀짓는 대답이기도 하다.
 **이데아는 우리가 매일매일 사용하는 오감(시각, 청각, 촉각, 미각 ,후각)을 사용해서 이데아를 인식하려고 해서는 안되고 이성을 사용해야 한다고 한다.**
- 
-플라톤은 이성과 감성(감각)를 이분법 적으로 나누어서 이성을 감각 위에 놓는 사상이다. 이성이 더 가치있고 우월하고 고귀하다라고 생각했다. 
+
+플라톤은 이성과 감성(감각)를 이분법 적으로 나누어서 이성을 감각 위에 놓는 사상이다. 이성이 더 가치있고 우월하고 고귀하다라고 생각했다.
 서양 사고 방식의 상식이기도 하다.
 
-그의 원천을 거슬러 올라가다 보면 가장 강력한 사상을 맨처음에 제공한 사람이 바로 플라톤이라고 할 수 있다. 
-그래서 우리 인간에 삶에서 그리고 인간의 삶을 포괄해서 현실에 존재하는 모든 것들에 관해서 중요한 것은 이데아를 얼마나 잘 모방하느냐 얼마나 잘 인식하느냐 이다 근데 그것은 감각을 통해서 인식할 수 없다. 
-이데아에 관해서는 감성 감각은 아니고 오히려 감성 감각은 이데아를 인식하는데 방해가 된다는 게 플라톤의 생각이다. 
+그의 원천을 거슬러 올라가다 보면 가장 강력한 사상을 맨처음에 제공한 사람이 바로 플라톤이라고 할 수 있다.
+그래서 우리 인간에 삶에서 그리고 인간의 삶을 포괄해서 현실에 존재하는 모든 것들에 관해서 중요한 것은 이데아를 얼마나 잘 모방하느냐 얼마나 잘 인식하느냐 이다 근데 그것은 감각을 통해서 인식할 수 없다.
+이데아에 관해서는 감성 감각은 아니고 오히려 감성 감각은 이데아를 인식하는데 방해가 된다는 게 플라톤의 생각이다.
 이데아는 <u>이성(reason)</u>을 통해서 이데아 인식에 다가갈 수 있다.
 
-플라톤은 이성을 “영혼의 눈” 이라고 말한다. 
-이데아는 순수한 영혼의 눈을 통해서만 인식할 수 있다는 게 플라톤의 생각이다. 
+플라톤은 이성을 “영혼의 눈” 이라고 말한다.
+이데아는 순수한 영혼의 눈을 통해서만 인식할 수 있다는 게 플라톤의 생각이다.
 
-그리스어 하나를 공부해보자. 
+그리스어 하나를 공부해보자.
 동사인데 그리스 인다 **보다라는 뜻의 idein** 이라는 것이 있다(이데인)
-**idea(이데아)는 idein**이라는 **보다**라는 동사에서 나온 단어이다. idea(형태, 형상, 모양, 모습을 가지고 있는 것에 썼었다) 
-하지만 플라톤은 idea를 가져와 자신의 핵심 개념으로 사용한다. 형태, 형상 모양, 모습을 가지고 있지만 우리 <u>육체의 눈</u>으로 보이는 것이 아니라 <u>이성의 눈</u>에만 보이는 모습 그것이 바로 이데아다 라고 의미가 변화가 된다. 
+**idea(이데아)는 idein**이라는 **보다**라는 동사에서 나온 단어이다. idea(형태, 형상, 모양, 모습을 가지고 있는 것에 썼었다)
+하지만 플라톤은 idea를 가져와 자신의 핵심 개념으로 사용한다. 형태, 형상 모양, 모습을 가지고 있지만 우리 <u>육체의 눈</u>으로 보이는 것이 아니라 <u>이성의 눈</u>에만 보이는 모습 그것이 바로 이데아다 라고 의미가 변화가 된다.
+
 #### idea: 보이는 것, 형태, 모습을 가진 것 이라는 의미를 가졌었으나 플라톤이 영혼의 눈을 통해서만 보이는 것 이라는 이데아 개념을 확립했다.
 
-![packed](..\..\..\..\images\Philosophy\Plato-Idea02\book.jpg){: width="400" height="700"}
+![packed](........\images\Philosophy\Plato-Idea02\book.jpg){: width="400" height="700"}
 
-플라톤의 파이돈이라는 책을 보면 
+플라톤의 파이돈이라는 책을 보면
 **"육체는 영혼의 감옥", "철학은 죽음의 연습"** 이라는 말이 있다.
-이데아를 제대로 인식하려면 그 이데아를 인식하는데 다가가서 조금이라도 더 이데아를 모방하고 분유하고 하는데 성공하려면 감각, 욕구, 육체로부터 멀어지는 (**정화**(실제 플라톤이 사용한 단어)되는 연습) 연습해야 한다. 
-파이돈은 소크라테스가 아테네의 법정으로부터 도시의 젊은이들을 타락시킨다. 끊임없이 질문을 퍼부어서 호도하고 타락시킨다라는 누명을 쓰고 아테네 법정에서 사형을 받고 독배를 받고 죽는다. 
+이데아를 제대로 인식하려면 그 이데아를 인식하는데 다가가서 조금이라도 더 이데아를 모방하고 분유하고 하는데 성공하려면 감각, 욕구, 육체로부터 멀어지는 (**정화**(실제 플라톤이 사용한 단어)되는 연습) 연습해야 한다.
+파이돈은 소크라테스가 아테네의 법정으로부터 도시의 젊은이들을 타락시킨다. 끊임없이 질문을 퍼부어서 호도하고 타락시킨다라는 누명을 쓰고 아테네 법정에서 사형을 받고 독배를 받고 죽는다.
 독배를 들고 죽기 직전에 소크라테스를 탈출 시키려는 제자들의 권유를 뿌리치고 죽음을 받아들인다.
 그때 자기를 감옥으로 면회온 친구들과 나눈 대화가 파이돈에 기록되어 있다. 플라톤은 육체는 "영혼의 감옥"이라는 말을 한다 그리고 "철학은 죽음의 연습"이다 라는 말을 소크라테스의 말을 통해 한다.
 
-왜냐면 철학을 한다는 것은 <u>영혼의 눈</u>을 사용해서 이데아에 대한 인식에 조금이라도 더 다가가려고 하는 활동이라고 한다면 그렇다면 철학은 육체에 속해있는 감각과 그와 결합되어 있는 욕구로부터 최대한 멀어져야 된다. 
+왜냐면 철학을 한다는 것은 <u>영혼의 눈</u>을 사용해서 이데아에 대한 인식에 조금이라도 더 다가가려고 하는 활동이라고 한다면 그렇다면 철학은 육체에 속해있는 감각과 그와 결합되어 있는 욕구로부터 최대한 멀어져야 된다.
 하지만 그것은 쉽지 않다 철학을 통해서 우리는 매일매일 육체로부터 멀어지는 연습을 해야한다 하지만 인간은 세상을 살아가는 동안 육체적인 존재로 살아갈 수 밖에 없다.
 그래서 매일매일 철학을 연습해서 이데아의 인식에 다가간 다는 것은 육체로부터 완전히 분리된다는 것은 살아있는 동안 불가능하지만 어쨌든 최대한 육체로부터 멀어지는 연습, 즉 죽음에 다가가는 연습을 하는 것을 의미하게 된다 그래서 철학은 죽음의 연습이다. 라는 언명이 나오게 되는 것이다.
 
 ---
-***"원래 1편으로 끝내려고 했는데 이데아 3편까지는 만들어야 어느 정도 마무리를 할 수 있겠네... ㅋㅋ 전혀 예상치 못함.."***
+
+**_"원래 1편으로 끝내려고 했는데 이데아 3편까지는 만들어야 어느 정도 마무리를 할 수 있겠네... ㅋㅋ 전혀 예상치 못함.."_**
