--- a/_posts/2021-01-18-plato-idea01.markdown
+++ b/_posts/2021-01-18-plato-idea01.markdown
@@ -21,7 +21,7 @@ description: Idea
 
 ### 이데아는 서양 고대 그리스의 플라톤의 핵심 개념으로부터 유래했다.
 
-![packed](........\images\Philosophy\Plato-Idea01\academia.jpg)
+![packed](\images\Philosophy\Plato-Idea01\academia.jpg)
 
 지금 위에 보는 그림이 고대 그리스에 플라톤이 세운 아카데미아라는 주제로 그린 그림이다.
 당시 아카데미아는 플라톤이 많은 제자들을 기르기 위해 지었던 학당이다. 지금의 (academy)의 어원을 이루고 있다고 보면 될 것이다.
