--- a/_posts/2021-04-25-intro.md
+++ b/_posts/2021-04-25-intro.md
@@ -6,4 +6,6 @@ tags: [game, programming]
 description: This is my new website. On this websites come al my projects.
 ---
 
-this is a link to my [cookie clicker.](http://cookie-clicker.osx.eu/)
+Welcome to my new website! I aim to add new posts frequently, so make sure to check back regularly!
+
+I am kinda proud of it, so let me know what you think of it. 
