--- a/_posts/2021-04-25-intro.md
+++ b/_posts/2021-04-25-intro.md
@@ -6,6 +6,8 @@ tags: [game, programming]
 description: This is my new website. On this websites come al my projects.
 ---
 
-Welcome to my new website! I aim to add new posts frequently, so make sure to check back regularly!
+![My First Website](/assets/media/my-first-website.jpg)
+
+Welcome to my first website! I aim to add new posts frequently, so make sure to check back regularly!
 
 I am kinda proud of it, so let me know what you think of it. 
