--- a/_posts/2021-10-27-whoami.md
+++ b/_posts/2021-10-27-whoami.md
@@ -1,9 +1,8 @@
 ---
 layout: post
 title: Who am I?
-categories: [personal]
 tags: [personal,whoami]
-description:
+fullview: true
 ---
 
 Hey You! :wave:
