--- a/_posts/2021-10-27-whoami.md
+++ b/_posts/2021-10-27-whoami.md
@@ -5,18 +5,18 @@ tags: [personal,whoami]
 fullview: true
 ---
 
-Hey You! :wave:
+Hey You! 👋
 
-Welcome to another Azure-blog. :cloud:
+Welcome to another Azure-blog. ☁️
 
 Short introduction:
 
-- I work as a techincal specialist at Advania - Knownledge Factory. :nerd_face:
+- I work as a techincal specialist at Advania - Knownledge Factory. 🧐
 
-- The best days starts with Azure, Bicep or PowerShell. :mechanical_arm:
+- The best days starts with Azure, Bicep or PowerShell. 🦾
 
-- In my free time I play discgolf, but you won't find me on the DGPT any time soon. :flying_disc:
+- In my free time I play discgolf, but you won't find me on the DGPT any time soon. 🥏
 
-- I buy atleast one pair of running shoes every month, even tough I hate running. :high_heel:
+- I buy atleast one pair of running shoes every month, even tough I hate running. 👠
 
 The purpose of this blog is to learn and share anything I find intresting or hard to explain.
