--- a/_posts/2021-10-27-whoami.md
+++ b/_posts/2021-10-27-whoami.md
@@ -11,7 +11,7 @@ Welcome to another Azure-blog. ☁️
 
 Short introduction:
 
-- I work as a techincal specialist at Advania - Knownledge Factory. 🧐
+- I work as a technical specialist at Advania - Knownledge Factory. 🧐
 
 - The best days starts with Azure, Bicep or PowerShell. 🦾
 
